--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tjohnn/vuejs-datetimepicker.git"
+    "url": "git+https://github.com/hwata/vuejs-datetimepicker-jp"
   },
   "scripts": {
     "lint": "eslint --ext .js,.vue src",
